<resources>
    <string name="app_name">StockApi</string>
    <string name="search_field_placeholder">Введите название товара</string>
    <string name="cancel_button_title">Отмена</string>


    <string name="critical_error_screen_title">Что-то сломалось</string>
    <string name="critical_error_screen_text">Постараемся быстро починить</string>
    <string name="critical_error_screen_again">Попробовать снова</string>
    <string name="critical_error_no_internet_error">Похоже, что у вас отсутствует интернет</string>

    <string name="nothing_found_title">Ничего не нашлось</string>
    <string name="nothing_found_text">Попробуй скорректировать запрос</string>

    <string name="stock_item_fragment_remaining_text">Остаток</string>
    <string name="stock_item_fragment_price_text">Цена</string>
    <string name="stock_item_fragment_sum_text">Розничная сумма</string>
    <string name="stock_item_fragment_sum_value">%1$s₽</string>
    <string name="stock_item_fragment_product_text">Алкогольная продукция</string>
    <string name="stock_item_fragment_no_data">Неизвестно</string>
    <string name="stock_item_fragment_alcohol_text">Содержание спирта</string>
    <string name="stock_item_fragment_alcohol_value">%1$s%</string>
    <string name="stock_item_barcode">Код: %1$s</string>
    <string name="stock_item_price">%1$s₽</string>
    <string name="content_description_back">back</string>


</resources>